Fix misalignment on grid group row
Issue happens when grid has no edit icon column.

Fixes RM-30710

(cherry picked from commit 3ac573fc2ba4a2bb824fcf0a22115eb9fb800347)

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -373,6 +373,7 @@
   margin-top: 2px !important;
 }
 
+.slick-group > .slick-cell,
 .slick-group > .slick-cell-checkboxsel {
    text-align: inherit;
 }
